# ragmate

./: .bandit  .dockerignore  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  check.py  compose.yml  pyproject.toml  ruff.toml  setup.cfg
app/: config.py  llm.py  main.py  models.py  services.py  shared_state.py  types.py
requirements/: base.txt  local.txt
scripts/: post-checkout-hook.sh
