# setup.cfg


[mypy]
python_version = 3.13
files = app
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = True
strict_optional = True
strict_equality = True
no_implicit_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unreachable = True
warn_no_return = True

[mypy-*.migrations.*]
ignore_errors = True

[metadata]
python_requires = 3.13


[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
exclude =
